--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -80,6 +80,7 @@ ul
   background: #608074
   border-radius: 2%
   padding: 1em
+  transition: display 500ms ease-in-out
 
 .description-0
   top: 44%
