--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -67,4 +67,4 @@
   </div>
 </section>
 
-<app-srh-tour-game *ngIf="srhTourStarted"></app-srh-tour-game>
+<app-srh-tour-game *ngIf="srhTourStarted" [@rollInOut]></app-srh-tour-game>
