--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -69,6 +69,53 @@ ul
     img
       filter: brightness(100%)
 
+.pulse
+  margin: 100px
+  display: block
+  cursor: pointer
+  box-shadow: 0 0 0 rgba(255,255,255, 0.4)
+  animation: pulse 4s infinite
+  position: absolute
+  bottom: 0%
+  left: 35%
+  font-size: 1.4em
+
+  background: transparent
+  border: 4px solid #DBD7DC
+  border-radius: 5%
+  color: white
+  padding: 1em
+
+.pulse:hover
+  animation: none
+
+
+@-webkit-keyframes pulse
+  0%
+    -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.8)
+
+  70%
+      -webkit-box-shadow: 0 0 0 10px rgba(255,255,255, 0.4)
+
+  100%
+      -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0)
+
+
+@keyframes pulse
+  0%
+    -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0.8)
+    box-shadow: 0 0 0 0 rgba(255,255,255, 0.8)
+
+  70%
+      -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0.4)
+      box-shadow: 0 0 0 10px rgba(255,255,255, 0.4)
+
+  100%
+      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0)
+      box-shadow: 0 0 0 0 rgba(255,255,255, 0)
+
+
+
 .description-text
   position: absolute
   right: 22%
