--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -27,7 +27,7 @@
   position: relative
 
 .srh-box-medium
-  background: #608074
+  background: $dark-green
   border: 1px solid darken($light-grey, 5%)
   padding: 2%
   position: relative
@@ -57,7 +57,8 @@ h3
   color: white
   border-radius: 5%
   padding: .7em
-  margin-left: 52%
+  margin-right: .3em
+  float: right
 
 .trophy
   width: 12vw
@@ -89,7 +90,7 @@ h3
   min-height: 250px
 
 .leftbox
-  background: #608074
+  background: $dark-green
 
 .food
   background-size: cover
@@ -97,7 +98,7 @@ h3
   min-height: 250px
 
 .rightbox
-  background: #608074
+  background: $dark-green
 
 .chef
   width: 4vw
@@ -160,6 +161,7 @@ h3
   background: #5186DC
   color: white
   border-radius: 1%
+  padding-bottom: 3.6em
 
 .tourtext
   width: 70%
@@ -167,11 +169,10 @@ h3
   line-height: 1.3em
 
 .right
-  margin-right: 1em
   margin-bottom: .1em
   background: transparent
   border: 2px solid #DBD7DC
-  margin-left: 78%
   border-radius: 5%
   color: white
   padding: .7em
+  float: right
