design changes and various

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -39,4 +39,6 @@
   </section>
   <!-- tap anywhere button -->
   <button *ngIf="blurElement > -2" [@fadeInOut] class="pulse" type="button">Weiter durch Tippen</button>
+
+  <p class="hiddenlink" (click)="srhTourActive = true">Hi Nasta</p>
 </main>
