--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -11,10 +11,17 @@ main.container
 h1
   margin-bottom: 7%
 
+.hiddenlink
+  position: absolute
+  bottom: 10%
+  right: 0
+  color: black
+  display: none
+
 .home
   position: absolute
   right: 3%
-  top: 3%
+  top: 5.7%
   z-index: 1000
 
 .home > img
@@ -23,7 +30,7 @@ h1
 .repeat-tour
   position: absolute
   right: 8%
-  top: 4%
+  top: 7.6%
   z-index: 1000
 
 ul
