--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -101,9 +101,11 @@ h3
   background: $dark-green
 
 .chef
-  width: 4vw
-  margin-left: 39%
-  margin-top: 26%
+  width: 60%
+  margin-left: 50%
+  transform: translateX(-50%)
+  margin-top: 15%
+  margin-bottom: 5%
 
 .nahrungbutton
   padding: .9em
@@ -125,30 +127,33 @@ h3
   margin-top: 15%
 
 .wifi
-  width: 5vw
+  width: 4vw
   position: absolute
   left: 13%
   top: 12%
 
 .telephone
-  width: 5vw
+  width: 4vw
   position: absolute
   left: 13%
   top: 40%
 
 .tv
-  width: 5vw
+  width: 4vw
   position: absolute
   left: 13%
   top: 69%
 
+.info-block
+  padding: 0.84em 0
+
 .bezeichnung
-  margin: 21% 0 3% 43%
+  margin: 1% 0 3% 43%
   font-weight: bolder
 
 .preise
   font-size: .8em
-  margin: 2% 0 35% 43%
+  margin: 2% 0 5% 43%
 
 .letztes
   margin-bottom: 30%
