--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -50,13 +50,17 @@ ul
   padding: 2.5%
   margin-right: 1%
   border-radius: 10%
-  border: 1.5px solid white
+  border: 1.5px solid $light-green
 
 .finished
-  border: 1.5px solid mediumseagreen
+  border: 1.5px solid white
+
+.finished-event
+  opacity: 0.6
 
 .upcoming
-  border: 1.5px solid #EC7063
+  border: 1.5px solid $light-green
+  background: $light-green
 
 .checkmark
   opacity: 0
