--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -39,22 +39,20 @@
   <div class="srh-segment-small">
     <h2>Info</h2>
     <article class="srh-box info">
-      <div class="topmargin">
-      <div>
+      <div class="info-block">
         <img class="wifi" src="../assets/icons/wifi.svg" alt="Wifi"/>
         <p class="bezeichnung">Internet</p>
         <p class="preise">50 Cent pro Tag</p>
       </div>
-      <div>
+      <div class="info-block">
         <img class="telephone" src="../assets/icons/phone.svg" alt="Phone"/>
         <p class="bezeichnung">Telefon</p>
         <p class="preise">50 Cent pro Tag</p>
       </div>
-      <div>
+      <div class="info-block">
         <img class="tv" src="../assets/icons/computer-screen.svg" alt="Screen"/>
         <p class="bezeichnung">Fernsehen</p>
-        <p class="preise letztes">50 Cent pro Tag</p>
-      </div>
+        <p class="preise">50 Cent pro Tag</p>
       </div>
     </article>
   </div>
