added sport module

--- a/src/app/infobar/infobar.component.sass
+++ b/src/app/infobar/infobar.component.sass
@@ -17,6 +17,7 @@ article
   color: white
   padding: 0.8em 1.6em
   z-index: 10010
+  box-shadow:  5px 10px #888888
 
 button
   background: transparent
