--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -28,6 +28,8 @@
   margin-bottom: 4vh
 
 .daily
+  position: absolute
+  top: 22.22%
   width: 2.9vw
 
 ul
@@ -42,7 +44,7 @@ ul
   display: inline-block
 
 .tagesplan
-  margin-left: 4%
+  margin-left: 16%
   font-size: 1.1em
 
 .time
