--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -34,14 +34,16 @@ p
   margin-left: 10%
 
 strong
+  position: absolute
   font-size: 1.3em
-  margin-left: 10%
+  margin-left: 9.3%
+  width: 80%
 
 .quizbox
   padding-left: 0
   width: 80%
   float: right
-  margin-top: 4%
+  margin-top: 10%
   margin-bottom: 4%
   margin-right: 10%
   font-size: 1.1em
@@ -82,7 +84,7 @@ strong
 .winnerpoints
   position: absolute
   top: 54vh
-  left: 35.5vw
+  left: 27.5vw
   font-size: 1.3em
   background: #608074
   border-radius: 11%
