--- a/src/app/srh-tour-game/srh-tour-game.component.html
+++ b/src/app/srh-tour-game/srh-tour-game.component.html
@@ -70,7 +70,7 @@
     <span class="winnerpoints">{{points}}/3 Punkte</span>
     <p class="winnertext">Sie haben ein Freigetränk in der Cafeteria gewonnen!</p>
     <img class="medalsmall" src="../assets/icons/medalsmall.svg"/>
-    <img class="trophysmall" src="../assets/icons/trophy.svg"/>
+    <!--<img class="trophysmall" src="../assets/icons/trophy.svg"/>-->
 
     <!-- FIXME:  -->
     <button (click)="!srhTourStarted" type="button" class="btn-secondary btn-right">Beenden</button>
