--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -10,6 +10,7 @@ main.container
 
 h1
   margin-bottom: 7%
+  font-weight: normal
 
 .hiddenlink
   position: absolute
@@ -88,7 +89,7 @@ ul
 
   background: transparent
   border: 4px solid #DBD7DC
-  border-radius: 5%
+  border-radius: 0.2em
   color: white
   padding: 1em
 
@@ -121,17 +122,16 @@ ul
       box-shadow: 0 0 0 0 rgba(255,255,255, 0)
 
 
-
 .description-text
   position: absolute
-  right: 22%
-  top: 43%
+  right: 18%
+  top: 23%
   color: white
   z-index: 9999999999
   width: 70%
   font-size: 1.8em
   background: #608074
-  border-radius: 2%
+  border-radius: 0.2em
   padding: 1em
   transition: display 500ms ease-in-out
 
@@ -148,14 +148,14 @@ ul
   left: -16%
 
 .description-3
-  top: 62.5%
+  top: 48.5%
   left: 28%
 
 .description-4
-  top: 56.5%
+  top: 21.5%
   left: -37%
   width: 60%
 
 .description-5
-  top: 33%
+  top: 43%
   left: -16%
