--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -61,41 +61,42 @@ strong
 
 .winner
   position: absolute
-  width: 32vw
+  width: 30vw
   top: 0
-  left: 19vw
+  left: 21vw
 
 .winnertext
   position: absolute
-  top: 68vh
-  left: 0
-  font-size: 1.3em
-  border: 2px solid #5186DC
+  top: 41.5vh
+  left: 1%
+  font-size: 1.4em
+    /* border: 2px solid #5186DC; */
   padding: 1.73em
   border-radius: 1%
+  margin-left: 10.5%
+  color: #5186DC
 
 .special-font-2
   position: absolute
-  top: 41vh
-  left: 20vw
+  top: 38vh
+  left: 16vw
   font-size: 1.9em
   color: #5186DC
 
 .winnerpoints
   position: absolute
-  top: 54vh
+  top: 56vh
   left: 27.5vw
   font-size: 1.3em
-  background: #608074
-  border-radius: 11%
+  color: #608074
+  border-radius: 5%
   padding: 1.8em
-  color: white
-
+  border: 2px solid #608074
 
 .medalsmall
   position: absolute
   width: 4.7vw
-  top: 72vh
+  top: 69vh
   left: 58vw
 
 .trophysmall
