--- a/src/app/welcome-screen/welcome-screen.component.sass
+++ b/src/app/welcome-screen/welcome-screen.component.sass
@@ -18,7 +18,7 @@ article
   h1
     // font-weight: normal
     font-size: $font-size-default * 1.6
-    color: $primary-color
+    color: #5186DC
 
   .intro-text
     margin-bottom: 1.5em
@@ -32,8 +32,13 @@ article
 
       strong
         font-size: $font-size-default * 1.6
-        color: $primary-color
+        color: #5186DC
 
   .button-section
     text-align: center
     margin: 1.4em 0
+
+
+  .start
+    background: #7DCEA0
+    border: 1px solid #7DCEA0
