--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -42,17 +42,17 @@
       <div class="info-block">
         <img class="wifi" src="../assets/icons/wifi.svg" alt="Wifi"/>
         <p class="bezeichnung">Internet</p>
-        <p class="preise">50 Cent pro Tag</p>
+        <p class="preise">50 Cent / Tag</p>
       </div>
       <div class="info-block">
         <img class="telephone" src="../assets/icons/phone.svg" alt="Phone"/>
         <p class="bezeichnung">Telefon</p>
-        <p class="preise">50 Cent pro Tag</p>
+        <p class="preise">10 Cent / Minute</p>
       </div>
       <div class="info-block">
         <img class="tv" src="../assets/icons/computer-screen.svg" alt="Screen"/>
         <p class="bezeichnung">Fernsehen</p>
-        <p class="preise">50 Cent pro Tag</p>
+        <p class="preise">30 Cent / Stunde</p>
       </div>
     </article>
   </div>
