--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -78,7 +78,7 @@ h3
     margin-left: 0
 
 .map
-  /*background-image: url("../assets/images/standort.jpg")
+  /*background-image: url("../assets/images/map.jpg")
   background-size: cover
   background-repeat: no-repeat
   background-position: center
