--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <section class="sidebar" [ngClass]="{'active-sidebar': blurElement==-1 || blurElement == -3}">
-  <img class="logo" src="../assets/images/SRH_weiß.png" (click)="srhTourActive = !srhTourActive"/>
+  <img class="logo" src="../assets/images/waldklinikum.png" (click)="srhTourActive = !srhTourActive"/>
 
   <h3 class="begruessung">Hallo, <br> {{patientName}}</h3>
 
