Some UI changes

--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -17,7 +17,7 @@
   transition: filter 500ms ease-in-out
 
 .logo
-  width: 14vw
+  width: 22vw
   margin-bottom: 2vh
   margin-top: 5vh
 
@@ -29,7 +29,7 @@
 
 .daily
   position: absolute
-  top: 22.22%
+  top: 27%
   width: 2.9vw
 
 ul
@@ -46,6 +46,7 @@ ul
 .tagesplan
   margin-left: 16%
   font-size: 1.1em
+  margin-top: 13.5%
 
 .time
   /*background-color: mediumseagreen
