--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <section class="sidebar" [ngClass]="{'active-sidebar': blurElement==-1 || blurElement == -3}">
-  <img class="logo" src="../assets/images/waldklinikum.png" (click)="srhTourActive = !srhTourActive"/>
+  <img class="logo" src="../../assets/images/waldklinikum.png" (click)="srhTourActive = !srhTourActive"/>
 
   <h3 class="begruessung">Hallo, <br> {{patientName}}</h3>
 
   <article class="tagesplanbox">
-    <img class="daily" src="../assets/icons/calendar-white.svg" alt="daily"/><p class="tagesplan">Tagesplan</p>
+    <img class="daily" src="../../assets/icons/calendar-white.svg" alt="daily"/><p class="tagesplan">Tagesplan</p>
     <ul>
       <li class="finished-event"><span class="time finished">07:00</span> Frühstück</li>
       <li class="finished-event">
