--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -55,7 +55,7 @@ strong
     background: ghostwhite
     padding: 3%
     margin: 2% 0
-    border: 2px solid #333333
+    border: 2px solid #e9e9e9
     border-radius: 3%
     box-shadow: 0px 2px 1px 2px #999999
 
