beenden button hides tour

--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -67,4 +67,4 @@
 
 <app-infobar [infoBar]="infoBar"></app-infobar>
 
-<app-srh-tour-game *ngIf="srhTourStarted" [@rollInOut]></app-srh-tour-game>
+<app-srh-tour-game *ngIf="srhTourStarted" [@rollInOut] [srhTourStarted]="srhTourStarted"></app-srh-tour-game>
