--- a/src/app/srh-tour-game/srh-tour-game.component.html
+++ b/src/app/srh-tour-game/srh-tour-game.component.html
@@ -1,4 +1,4 @@
-<section class="srh-tour-game">
+<section *ngIf="srhTourStarted" class="srh-tour-game">
   <h1>Das SRH Quiz</h1>
   <article *ngIf="stage == 1" [@rollInOut] class="level">
 
@@ -72,8 +72,7 @@
     <!--<img class="medalsmall" src="../assets/icons/medalsmall.svg"/>-->
     <!--<img class="trophysmall" src="../assets/icons/trophy.svg"/>-->
 
-    <!-- FIXME:  -->
-    <button (click)="!srhTourStarted" type="button" class="btn-secondary btn-right">Beenden</button>
+    <button (click)="endTour()" type="button" class="btn-secondary btn-right">Beenden</button>
   </article>
 
 </section>
