--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -63,12 +63,12 @@ strong
   position: absolute
   width: 30vw
   top: 0
-  left: 21vw
+  left: 50%
+  transform: translateX(-50%)
 
 .winnertext
   position: absolute
   top: 41.5vh
-  left: 1%
   font-size: 1.4em
   padding: 1.73em
   border-radius: 1%
@@ -76,16 +76,17 @@ strong
   color: #5186DC
 
 .special-font-2
-  position: absolute
+  position: relative
   top: 38vh
-  left: 16vw
+  left: 50%
+  transform: translateX(-50%)
   font-size: 1.9em
   color: #5186DC
 
 .winnerpoints
-  position: absolute
-  top: 56vh
-  left: 27.5vw
+  position: relative
+  top: 18vh
+  left: 49.5vw
   font-size: 1.3em
   color: #608074
   border-radius: 5%
@@ -111,4 +112,3 @@ button.btn-right
   background: #999999
   color: white
   border-radius: 5%
-
