--- a/src/app/srh-tour-game/srh-tour-game.component.html
+++ b/src/app/srh-tour-game/srh-tour-game.component.html
@@ -66,12 +66,15 @@
 
   <article *ngIf="stage == 5" [@rollInOut] class="level">
     <img class="winner" src="../assets/icons/medal.svg"/>
-    <h2 class="special-font-2">HERZLICHEN GLÜCKWUNSCH!</h2>
+    <h2 class="special-font-2">Herzlichen Glückwunsch!</h2>
     <span class="winnerpoints">{{points}}/3 Punkte</span>
     <p class="winnertext">Sie haben ein Freigetränk in der Cafeteria gewonnen!</p>
-    <!--<img class="medalsmall" src="../assets/icons/medalsmall.svg"/>-->
-    <!--<img class="trophysmall" src="../assets/icons/trophy.svg"/>-->
-
+    <p><span>11</span> weitere Patienten auf Ihrer Station freuen sich über ein Gespräch.</p>
+    <ul>
+      <li>Rüdiger Harming <p>Kontaktieren</p></li>
+      <li>Lise Meitner <p>Kontaktieren</p></li>
+    </ul>
+    <button type="button">Andere Patienten dürfen mir Nachrichten schreiben.</button>
     <button (click)="endTour()" type="button" class="btn-secondary btn-right">Beenden</button>
   </article>
 
