--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -76,7 +76,7 @@ strong
   color: #5186DC
 
 .special-font-2
-  position: relative
+  position: absolute
   top: 38vh
   left: 50%
   transform: translateX(-50%)
@@ -84,7 +84,7 @@ strong
   color: #5186DC
 
 .winnerpoints
-  position: relative
+  position: absolute
   top: 18vh
   left: 49.5vw
   font-size: 1.3em
