--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -1,13 +1,13 @@
 <article *ngIf="!clickedSkip && !clickedGo" [@fadeInOut]>
-  <h1 (click)="clickGo(true)">Herzlich Willkommen {{patientName}}!</h1>
+  <h1 (click)="clickGo(true)">Willkommen {{patientName}}!</h1>
   <p (click)="clickGo(true)" class="intro-text">Erfahren Sie in nur <strong>2 Minuten</strong> spielerisch alles, was Sie während Ihres Aufenthaltes im SRH Waldklinikum wissen möchten.</p>
 
   <section (click)="clickGo(true)" class="info">
     <div class="column">
-      <p><strong>1.700</strong><br />Mitarbeiter</p>
+      <p><strong>300</strong><br />Ärzte</p>
     </div>
     <div class="column">
-      <p><strong>24</strong><br />Kliniken</p>
+      <p><strong>700</strong><br />Schwestern</p>
     </div>
     <div class="column">
       <p><strong>550.000</strong><br />Patienten</p>
