--- a/src/app/welcome-screen/welcome-screen.component.sass
+++ b/src/app/welcome-screen/welcome-screen.component.sass
@@ -7,11 +7,11 @@ article
   left: 50%
   top: 40%
   transform: translate(-50%, -50%)
-  background: linear-gradient(to left, #EFEBE9 10%, #F5F5F5,  #EFEBE9 90%)
+  background: white
   padding: 2%
   z-index: 1100
   font-size: $font-size-default * 1.2
-  text-align: center
+  /*text-align: center
   border: 1px solid $grey
   box-shadow: 0 12px 12px rgba(0,0,0,0.56), 0 6px 12px rgba(0,0,0,0.53)
 
