Last UI changes

--- a/src/app/welcome-screen/welcome-screen.component.sass
+++ b/src/app/welcome-screen/welcome-screen.component.sass
@@ -11,7 +11,7 @@ article
   padding: 2%
   z-index: 1100
   font-size: $font-size-default * 1.2
-  /*text-align: center
+  text-align: center
   border: 1px solid $grey
   box-shadow: 0 12px 12px rgba(0,0,0,0.56), 0 6px 12px rgba(0,0,0,0.53)
 
@@ -40,5 +40,5 @@ article
 
 
   .start
-    background: #7DCEA0
-    border: 1px solid #7DCEA0
+    background: #28B463
+    border: 1px solid #28B463
