--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -2,7 +2,7 @@
 @import "../../variables"
 
 .overlay
-  background: #a0a0a0
+  background: #ccc
   z-index: 10
 
 main.container
@@ -32,6 +32,7 @@ h1
   right: 8%
   top: 7.6%
   z-index: 1000
+
 
 ul
   list-style: none
