--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -19,6 +19,13 @@ h1
   margin-bottom: 3vh
   margin-left: 10%
 
+.highlight
+  color: #608074
+
+.social
+  position: absolute
+  top: 50vh
+
 .punkte
   position: absolute
   right: 11%
@@ -63,7 +70,7 @@ strong
   position: absolute
   width: 30vw
   top: 0
-  left: 50%
+  left: 50% !important
   transform: translateX(-50%)
 
 .winnertext
@@ -74,11 +81,13 @@ strong
   border-radius: 1%
   margin-left: 10.5%
   color: #5186DC
+  left: 21% !important
+  transform: translateX(-50%)
 
 .special-font-2
   position: absolute
   top: 38vh
-  left: 50%
+  left: 28%
   transform: translateX(-50%)
   font-size: 1.9em
   color: #5186DC
