--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -1,3 +1,4 @@
+
 @import "../../../plugins/neat/neat"
 @import "../../variables"
 
@@ -18,13 +19,6 @@ h1
   font-size: 1.7em
   margin-bottom: 3vh
   margin-left: 10%
-
-.highlight
-  color: #608074
-
-.social
-  position: absolute
-  top: 50vh
 
 .punkte
   position: absolute
@@ -70,37 +64,41 @@ strong
   position: absolute
   width: 30vw
   top: 0
-  left: 50% !important
-  transform: translateX(-50%)
+  left: 21vw
 
 .winnertext
   position: absolute
   top: 41.5vh
+  left: 1%
   font-size: 1.4em
   padding: 1.73em
   border-radius: 1%
   margin-left: 10.5%
   color: #5186DC
-  left: 21% !important
+  left: 50%
+  width: 100%
   transform: translateX(-50%)
 
 .special-font-2
   position: absolute
   top: 38vh
-  left: 28%
+  left: 20vw
+  left: 50%
   transform: translateX(-50%)
   font-size: 1.9em
   color: #5186DC
 
 .winnerpoints
   position: absolute
-  top: 18vh
-  left: 49.5vw
+  top: 56vh
+  left: 27.5vw
   font-size: 1.3em
   color: #608074
   border-radius: 5%
   padding: 1.8em
   border: 2px solid #608074
+  left: 50%
+  transform: translateX(-50%)
 
 .medalsmall
   position: absolute
