modified readme, changed server paths

--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -87,6 +87,8 @@ strong
   transform: translateX(-50%)
   font-size: 1.9em
   color: #5186DC
+  left: 66%
+  width: 80%
 
 .winnerpoints
   position: absolute
