--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -11,7 +11,7 @@
     <article class="srh-box-medium">
       <img class="doc" src="../assets/images/doctor.png" alt="Doktor" />
       <div class="right-col">
-        <h3>Dr. Stefan Metzstein</h3>
+        <h3>Dr. Stefan Metz</h3>
         <p class="sub-h3">Kardiologie und Neurologie</p>
       </div>
       <button class="btn-primary doktorbutton" (click)="openInfoBar()">Erfahre mehr</button>
